lib/aws/proxy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 9901
static_resources:
  listeners:
    # The static http listener only does the work
    - name: http
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                http_protocol_options:
                  accept_http_10: true
                  default_host_for_http_10: "api.hyperswitch.io"
                stat_prefix: ingress_http
                server_name: "***"
                common_http_protocol_options:
                  idle_timeout: 840s
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /var/log/envoy/listener-https_access.log
                      format: |
                        [%START_TIME%] "%REQ(:METHOD)% %REQ(X-MASKED-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% %UPSTREAM_CLUSTER% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%" "%REQ(x-merchantid?:-)%" "%REQ(x-jp-merchant-id?:-)%" %REQ(CONTENT-TYPE)%
                http_filters:
                  - name: envoy.filters.http.local_ratelimit
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                      stat_prefix: http_local_rate_limiter
                  - name: envoy.filters.http.router
                    typed_config: {}
                local_reply_config:
                  mappers:
                    - filter:
                        status_code_filter:
                          comparison:
                            op: EQ
                            value:
                              default_value: 429
                              runtime_key: key_b
                      body_format_override:
                        text_format: |
                          <!DOCTYPE html>
                          <html>
                          <head>
                            <title>Rate Limit Exceeded</title>
                          </head>
                          <body>
                            <h1>Rate Limit Exceeded</h1>
                            <p>Too Many Requests - You have exceeded the rate limit. Please try again after a short while.</p>
                            <p>For more information, please visit <a href="https://api-reference.hyperswitch.io/docs/hyperswitch-api-reference/f09988eedb6d3-rate-limits">this link</a>.</p>
                          </body>
                          </html>
                        content_type: "text/html; charset=UTF-8"
                route_config:
                  name: prod_route_config
                  virtual_hosts:
                    - name: hyperswitch_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            timeout: 60s
                            idle_timeout: 60s
                            cluster: hyperswitch-cluster
                          typed_per_filter_config:
                            envoy.filters.http.local_ratelimit:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                              stat_prefix: local_rate_limit
                              token_bucket:
                                max_tokens: 80
                                tokens_per_fill: 80
                                fill_interval: 1s
                              filter_enabled:
                                runtime_key: local_rate_limit_enabled
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                              filter_enforced:
                                runtime_key: local_rate_limit_enforced
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                              response_headers_to_add:
                                - append: false
                                  header:
                                    key: x-local-rate-limit
                                    value: "true"
  clusters:
    - name: hyperswitch-cluster
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: "$CLUSTER_NAME"
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: "$UPSTREAM_HOST"
                      port_value: 80
